--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "its gonna be a legendary",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index",
+    "dev": "nodemon index"
   },
   "author": "art mary",
   "license": "ISC",
@@ -12,6 +13,9 @@
     "uuid": "^8.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "eslint": "^6.5.1",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2"
   }
 }
