--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index",
-    "dev": "nodemon index"
+    "dev": "nodemon index",
+    "lint": "eslint --fix . && echo 'Lint complete.'"
   },
   "author": "art mary",
   "license": "ISC",
@@ -13,9 +14,9 @@
     "uuid": "^8.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4",
     "eslint": "^6.5.1",
     "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.18.2"
+    "eslint-plugin-import": "^2.18.2",
+    "nodemon": "^2.0.4"
   }
 }
